--- a/_config.yml
+++ b/_config.yml
@@ -11,9 +11,9 @@ title                    : "Hsien-chin Lin"
 title_separator          : "-"
 name                     : &name "Hsien-chin Lin"
 description              : &description "PhD student at Heinrich-Heine-Universität Düsseldorf"
-url                      : https://hsienchin.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
+url                      : https://hsien1993.github.io # the base hostname & protocol for your site e.g. "https://mmistakes.github.io"
 baseurl                  : "" # the subpath of your site, e.g. "/blog"
-repository               : "hsienchin.github.io"
+repository               : "hsien1993.github.io"
 teaser                   :  # filename of teaser fallback teaser image placed in /images/, .e.g. "500x300.png"
 breadcrumbs              : false # true, false (default)
 words_per_minute         : 160
