--- a/_config.yml
+++ b/_config.yml
@@ -81,7 +81,7 @@ analytics:
 # Site Author
 author:
   name             : "Hsien-chin Lin"
-  avatar           : "profile.png"
+  avatar           : "IMG_6466.jpg"
   bio              : "Phd Student at HHU"
   location         : "Düsseldorf, Germany"
   employer         :
