update basic information

--- a/_config.yml
+++ b/_config.yml
@@ -82,7 +82,7 @@ analytics:
 author:
   name             : "Hsien-chin Lin"
   avatar           : "IMG_6466.jpg"
-  bio              : "Phd Student at HHU"
+  bio              : "Postdoctoral Researche at HHU"
   location         : "Düsseldorf, Germany"
   employer         :
   pubmed           : 
@@ -103,7 +103,7 @@ author:
   impactstory      : #"https://profiles.impactstory.org/u/xxxx-xxxx-xxxx-xxxx"
   lastfm           :
   linkedin         : "https://www.linkedin.com/in/hsien-chin-lin-23639616a/"
-  orcid            : 
+  orcid            : "https://orcid.org/0009-0006-0027-226X"
   pinterest        :
   soundcloud       :
   stackoverflow    : # http://stackoverflow.com/users/123456/username
